# solu

./: .gitignore  README.md  main.py  pyproject.toml
SoLU/: module.py
solu/: __init__.py  layers.py  module.py
