[project]
name = "solu"
version = "0.1.0"
description = "An implementation of softmax linear unit (solu) in PyTorch"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[project.urls]
"Homepage" = "https://codeberg.org/rashomon/solu"
"Repository" = "https://codeberg.org/rashomon/solu.git"
"Issues" = "https://codeberg.org/rashomon/solu/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["solu"]
