[project]
name = "softmax-linear-unit"
version = "0.1.0"
description = "An implementation of softmax linear unit (solu) in PyTorch"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "torch>=2.10.0",
]


[project.urls]
"Homepage" = "https://codeberg.org/rashomon/solu"
"Repository" = "https://codeberg.org/rashomon/solu.git"
"Issues" = "https://codeberg.org/rashomon/solu/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["solu"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]
